--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,7 @@
     "@next2d/net": "file:../net",
     "@next2d/renderer": "file:../renderer",
     "@next2d/text": "file:../text",
-    "@next2d/ui": "file:../ui"
+    "@next2d/ui": "file:../ui",
+    "@next2d/render-queue": "file:../render-queue"
   }
 }
