#154 publish処理を改修

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@next2d/core",
   "version": "*",
-  "description": "Next2D Core Packages",
+  "description": "Next2D Core Package",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp> (https://github.com/ienaga/)",
   "license": "MIT",
   "homepage": "https://next2d.app",
