--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@next2d/text",
   "version": "*",
-  "description": "Next2D Text Packages",
+  "description": "Next2D Text Package",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp> (https://github.com/ienaga/)",
   "license": "MIT",
   "homepage": "https://next2d.app",
