--- a/packages/events/package.json
+++ b/packages/events/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@next2d/events",
   "version": "*",
-  "description": "Next2D Events Packages",
+  "description": "Next2D Events Package",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp> (https://github.com/ienaga/)",
   "license": "MIT",
   "homepage": "https://next2d.app",
