--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@next2d/renderer",
   "version": "*",
-  "description": "Next2D Renderer Packages",
+  "description": "Next2D Renderer Package",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp> (https://github.com/ienaga/)",
   "license": "MIT",
   "homepage": "https://next2d.app",
