--- a/packages/texture-packer/package.json
+++ b/packages/texture-packer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@next2d/texture-packer",
   "version": "*",
-  "description": "Next2D Texture Packer Packages",
+  "description": "Next2D Texture Packer Package",
   "author": "Toshiyuki Ienaga<ienaga@tvon.jp> (https://github.com/ienaga/)",
   "license": "MIT",
   "homepage": "https://next2d.app",
