--- a/packages/events/package.json
+++ b/packages/events/package.json
@@ -2,7 +2,7 @@
   "name": "@next2d/events",
   "version": "*",
   "description": "Next2D Events Package",
-  "author": "Toshiyuki Ienaga<ienaga@tvon.jp> (https://github.com/ienaga/)",
+  "author": "Toshiyuki Ienaga<ienaga@next2d.app> (https://github.com/ienaga/)",
   "license": "MIT",
   "homepage": "https://next2d.app",
   "bugs": "https://github.com/Next2D/Player/issues",
