#154 update package.json

--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.19.0",
+    "@eslint/js": "^9.20.0",
     "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
     "@vitest/web-worker": "^3.0.5",
     "eslint": "^9.19.0",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
