#213 tsconfigの記述を変更

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,11 +12,10 @@
       "ES2022", "DOM", "DOM.Iterable"
     ],
     "moduleResolution": "bundler",
-    "baseUrl": "./",
     "outDir": "./dist/",
     "paths": {
       "@next2d/*": [
-        "../packages/*/src"
+        "./packages/*/src"
       ]
     }
   },
