--- a/packages/webgpu/package.json
+++ b/packages/webgpu/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@next2d/renderer",
+  "name": "@next2d/webgpu",
   "version": "*",
-  "description": "Next2D Renderer Package",
+  "description": "Next2D WebGPU Package",
   "author": "Toshiyuki Ienaga<ienaga@next2d.app> (https://github.com/ienaga/)",
   "license": "MIT",
   "homepage": "https://next2d.app",
@@ -17,16 +17,14 @@
   },
   "keywords": [
     "Next2D",
-    "Next2D Renderer"
+    "Next2D WebGPU"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Next2D/Player.git"
   },
   "peerDependencies": {
-    "@next2d/webgl": "file:../webgl",
-    "@next2d/webgpu": "file:../webgpu",
-    "@next2d/cache": "file:../cache",
-    "@next2d/texture-packer": "file:../texture-packer"
+    "@next2d/texture-packer": "file:../texture-packer",
+    "@next2d/render-queue": "file:../render-queue"
   }
 }
