--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "outDir": "./dist",
     
     "types": [
-      "vitest/globals"
+      "vitest/globals",
+      "@webgpu/types"
     ]
   },
   "include": [
